--- a/nexApp/scss/_dashboard.scss
+++ b/nexApp/scss/_dashboard.scss
@@ -197,8 +197,16 @@
 				width: 25px;
 				color: #fff;
 				margin-bottom: 2px;
-				background: #0288d1;
 			}
+		}
+		.days.assignment-1 div{
+			background: #03a9f4;
+		}
+		.days.assignment-2 div{
+			background: #ffc107;
+		}
+		.days.assignment-3 div{
+			background: #26c6da;
 		}
 	}
 }
