--- a/nexApp/scss/_dashboard.scss
+++ b/nexApp/scss/_dashboard.scss
@@ -3,13 +3,14 @@
 		background: #03a9f4;
 		color: #fff;
 		a, p {
-				color: #fff;
-			}
+			color: #fff;
+			vertical-align: text-bottom;
+		}
 		.nav-list {
 			padding-left: 0;
 			margin-top: 20px;
 			li {
-				padding: 20px;
+				padding: 20px 35px;
 			}
 		}
 		li.active {
@@ -19,6 +20,9 @@
 		.profile-detail {
 			text-align: center;
 			padding-top: 20px;
+			i.fa {
+				margin-right: 5px;
+			}
 		}
 		.career-role {
 			padding: 5px 10px;
@@ -72,7 +76,7 @@
 		}
 	}
 	i.fa {
-		margin-right: 10px;
+		margin-right: 20px;
 	}
 	.image-container {
 		padding-top: 10px;
